Добавил Sidebar. Выводит профиль и имя юзера (имя менятся с язфком) / добавил 3 кнопки для логина, смена темы, смена языка

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,6 @@
 {
   "hot": "HOT",
   "whatsNew": "WHATS NEW",
-  "newReleases": "NEW RELEASES"
+  "newReleases": "NEW RELEASES",
+  "userProfileName": "User"
 }
