--- a/lib/l10n/intl_kk.arb
+++ b/lib/l10n/intl_kk.arb
@@ -1,5 +1,6 @@
 {
-    "hot": "ЫСТЫҚ",
-    "whatsNew": "НЕ ЖАҢАЛЫҚ",
-    "newReleases": "ЖАҢА ШЫҒАРЫЛЫМДАР"
-  }
+  "hot": "ЫСТЫҚ",
+  "whatsNew": "НЕ ЖАҢАЛЫҚ",
+  "newReleases": "ЖАҢА ШЫҒАРЫЛЫМДАР",
+  "userProfileName": "Пайдаланушы"
+}
