--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,5 +1,6 @@
 {
-    "hot": "ГОРЯЧЕЕ",
-    "whatsNew": "ЧТО НОВОГО",
-    "newReleases": "НОВЫЕ ВЫПУСКИ"
+  "hot": "ГОРЯЧЕЕ",
+  "whatsNew": "ЧТО НОВОГО",
+  "newReleases": "НОВЫЕ ВЫПУСКИ",
+  "userProfileName": "Пользователь"
 }
