- добавил страницу настроек, тоже самое что и сайдбар: можно менять тему/язык/и фонт - сайдбар имеет кнопку для странцы настроек - добавил новые переводы настроек в языковых файлах

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,5 +2,9 @@
   "hot": "HOT",
   "whatsNew": "WHATS NEW",
   "newReleases": "NEW RELEASES",
-  "userProfileName": "User"
+  "userProfileName": "User",
+  "settings": "Settings",
+  "toggleTheme": "Toggle Theme",
+  "changeLanguage": "Change Language",
+  "changeFontFamily": "Change Font Family"
 }
